Correct Sea wave clipping Q&A BG

--- a/assets/css/style-sea.css
+++ b/assets/css/style-sea.css
@@ -20,7 +20,7 @@
   height: 300px;
   background: url(../img/wave.svg) repeat-x;
   background-size: auto 100%;
-  margin-top: -260px;
+  margin-top: -300px;
   z-index: 9999;
 }
 
